refactor: renamed SuggestionMetric to ModelMetric refactor: changed assumption that SuggestionMetric to default to responses as y_true refactor: explicit varible usage for metrics to avoid inconsistencies docs: updated docs to align with refac ModelMetric

--- a/docs/_source/tutorials_and_integrations/tutorials/feedback/end2end_examples/use-metrics-007.ipynb
+++ b/docs/_source/tutorials_and_integrations/tutorials/feedback/end2end_examples/use-metrics-007.ipynb
@@ -32,10 +32,7 @@
     "2. [Unify Responses](#Unify-Responses)\n",
     "3. [Annotation Metrics](#Annotation-Metrics)\n",
     "    1. [Agreement Metrics](#Agreement-Metrics)\n",
-    "    2. [Suggestions Metrics](#Suggestions-Metrics)\n",
-    "        1. [Suggestions Metrics for Unified Responses](#Suggestions-Metrics-for-Unified-Responses)\n",
-    "    3. [Responses Metrics](#Responses-Metrics)\n",
-    "        1. [Responses Metrics for Unified Responses](#Responses-Metrics-for-Unified-Responses)\n",
+    "    2. [Model Metrics](#Model-Metrics)\n",
     "4. [Conclusion](#Conclusion)\n"
    ]
   },
@@ -92,7 +89,8 @@
    "outputs": [],
    "source": [
     "import argilla as rg\n",
-    "from argilla.client.feedback.metrics.annotator_metrics import AnnotatorMetric"
+    "from argilla._constants import DEFAULT_API_KEY\n",
+    "from argilla.client.feedback.metrics.annotator_metrics import ModelMetric"
    ]
   },
   {
@@ -100,7 +98,6 @@
    "metadata": {},
    "source": [
     "In order to run this notebook we will need some credentials to push and load datasets from `Argilla` and `🤗 Hub`, let's set them in the following cell:"
-
    ]
   },
   {
@@ -349,23 +346,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The result we have shows that the agreement between the annotators is 0.2459 for the dataset we have, which is a low agreement. For Kripendorff's alpha, the value is in the range [0,1] and is usually interpreted in the following way: alpha >= 0.8 indicates a reliable annotation, alpha >= 0.667 allows making tentative conclusions, while the lower values suggest the unreliable annotation."
+    "The result we have shows that the agreement between the annotators is 0.2459 for the dataset we have, which is a low agreement. For Kripendorff's alpha, the value is in the range [0,1] and is usually interpreted in the following way: alpha >= 0.8 indicates a reliable annotation, alpha >= 0.667 allows making tentative conclusions, while the lower values suggest the unreliable annotation. This indicates we might want to revisit our annotation process and work on a better task design or annotator training."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Suggestions Metrics\n",
+    "### Model Metrics\n",
     "\n",
-    "Rather than examining the agreement between the annotators, we can also compare the responses of the annotators against the suggestions given to them. This will demonstrate how good the responses of each annotator are compared to a gold standard. \n",
-    "\n",
+    "For computing model metrics, we will assume that the responses given by the annotators are the gold standard, we compare against. The main advantage of adding suggestions to our dataset is to simplify and shorten the annotation task. By computing the model metrics, we will be able to see if the suggestions work in the way we want and if our models running inference are on apr with our expectations. In case of a low performance, we can consider improving the suggestions by updating and fine-tuning the model to generate better suggestions. This way, we can improve the performance of the annotators as well."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "The question type we have in the current dataset is `MultiLabelQuestion`. By using the `allowed_metrics` method, we can see the metrics below, which are the available ones for this question type."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -374,13 +376,12 @@
        "['accuracy', 'f1-score', 'precision', 'recall', 'confusion-matrix']"
       ]
      },
-     "execution_count": 14,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "metric = AnnotatorMetric(dataset=dataset, question_name=\"label\")\n",
+    "metric = ModelMetric(dataset=dataset, question_name=\"label\")\n",
     "metric.allowed_metrics"
    ]
   },
@@ -388,7 +389,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To calculate the suggestions metrics, we only need to call the `compute_suggestions_metrics` method, with the metric name being the argument. We also need to specify the question name in our dataset to calculate the metric."
+    "With Argilla, we can calculate the responses metrics easily with the `compute_responses_metrics` method. In this example, we will calculate all allowed metrics for the `MultiLabelQuestion` question type."
    ]
   },
   {
@@ -397,109 +398,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "suggestions_metrics = dataset.compute_suggestions_metrics(question_name=\"label\", metric_names=[\"accuracy\", \"precision\", \"recall\", \"f1-score\"])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We now have a dictionary whose keys are the IDs of annotators and values are the metrics at hand. We can look at the score of any annotator by giving the particular ID.\n",
-    "\n",
-    "We see that the annotator below has a total of 182 annotations while their scores are in mid between 0.4 and 0.6."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[AnnotatorMetricResult(metric_name='accuracy', count=182, result=0.5714285714285714),\n",
-       " AnnotatorMetricResult(metric_name='precision', count=182, result=0.5377066798941799),\n",
-       " AnnotatorMetricResult(metric_name='recall', count=182, result=0.4427905213343358),\n",
-       " AnnotatorMetricResult(metric_name='f1-score', count=182, result=0.428750352375672)]"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "suggestions_metrics[\"00000000-0000-0000-0000-000000000004\"]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Suggestions Metrics for Unified Responses\n",
-    "\n",
-    "We have calculated the given metrics for each annotator individually and obtained their respective results for the metric. However, we may sometimes want to calculate the performance of the annotators collectively, where we compare the unified responses of annotators for each record against the suggestions. As stated above, Argilla offers us the opportunity to unify the responses of annotators according to different strategies. We can first unify the responses as shown and then calculate the metrics for the unified responses.\n",
-    "\n",
-    "To accomplish this, we only need to feed the method above with the `strategy` argument. When this argument is set with the preferred strategy, the responses will first be unified and then, these unified responses will be compared to the suggestions. Let us go with the `majority` strategy."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "suggestions_metrics_unified = dataset.compute_suggestions_metrics(question_name=\"label\", metric_names=[\"accuracy\", \"precision\", \"recall\", \"f1-score\"], strategy=\"majority\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Now, we have a list of given metrics, where each one is calculated. We see that the general performance of the annotators is satisfactory with scores between 0.75 and 0.80. Additionally, the individual annotator we have examined above seems to perform relatively worse than the others as their scores are lower than the averages."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[AnnotatorMetricResult(metric_name='accuracy', count=1000, result=0.794),\n",
-       " AnnotatorMetricResult(metric_name='precision', count=1000, result=0.7996159173566102),\n",
-       " AnnotatorMetricResult(metric_name='recall', count=1000, result=0.7628235886740066),\n",
-       " AnnotatorMetricResult(metric_name='f1-score', count=1000, result=0.7728387991385041)]"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "suggestions_metrics_unified"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Responses Metrics\n",
-    "\n",
-    "Instead of forming the ground truths out of the suggestions given to the annotators, we can also choose the responses given by the annotators as the gold standard. The main advantage of adding suggestions to our dataset is to simplify and shorten the annotation task. By employing the responses metrics, we will be able to see if the suggestions work in the way we want. In case of a low performance, we can consider improving the suggestions or updating the model to generate better suggestions.\n",
-    "\n",
-    "With Argilla, we can calculate the responses metrics easily with the `compute_responses_metrics` method. We again specify the metric name and question name as the arguments. Let us feed the metric name with all possible metrics by means of `allowed_metrics`."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "responses_metrics = dataset.compute_responses_metrics(question_name=\"label\", metric_names=metric.allowed_metrics)"
+    "model_metrics = dataset.compute_model_metrics(question_name=\"label\", metric_names=metric.allowed_metrics)"
    ]
   },
   {
@@ -535,16 +434,18 @@
     }
    ],
    "source": [
-    "responses_metrics[\"00000000-0000-0000-0000-000000000004\"]"
+    "model_metrics[\"00000000-0000-0000-0000-000000000004\"]"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Responses Metrics for Unified Responses\n",
+    "#### Model Metrics for Unified Responses\n",
     "\n",
-    "We can also calculate the responses metrics for the unified responses as we did with the suggestions metrics. We only need to feed the compute_responses_metrics method with the `strategy` argument."
+    "We have calculated the given metrics for each comparing the model performance against each annotator individually and obtained the respective results for the metric. However, we may sometimes want to calculate the performance of the model against annotators collectively, where we compare the suggestions against unified responses of annotators . As stated above, Argilla offers us the opportunity to unify the responses of annotators according to different strategies. We can first unify the responses as shown and then calculate the metrics for the unified responses.\n",
+    "\n",
+    "To accomplish this, we only need to feed the method above with the `strategy` argument. When this argument is set with the preferred strategy, the responses will first be unified and then, these unified responses will be compared to the suggestions. Let us go with the `majority` strategy."
    ]
   },
   {
@@ -553,7 +454,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "responses_metrics_unified = dataset.compute_responses_metrics(question_name=\"label\", metric_names=[\"accuracy\", \"precision\", \"recall\", \"f1-score\"], strategy=\"majority\")"
+    "model_metrics_unified = dataset.compute_model_metrics(question_name=\"label\", metric_names=[\"accuracy\", \"precision\", \"recall\", \"f1-score\"], strategy=\"majority\")"
    ]
   },
   {
@@ -576,7 +477,7 @@
     }
    ],
    "source": [
-    "responses_metrics_unified"
+    "model_metrics_unified"
    ]
   },
   {
