chore: rename AnnotatorMetricResult to ModelMetricResult

--- a/docs/_source/tutorials_and_integrations/tutorials/feedback/end2end_examples/use-metrics-007.ipynb
+++ b/docs/_source/tutorials_and_integrations/tutorials/feedback/end2end_examples/use-metrics-007.ipynb
@@ -400,11 +400,11 @@
     {
      "data": {
       "text/plain": [
-       "[AnnotatorMetricResult(metric_name='accuracy', count=182, result=0.5714285714285714),\n",
-       " AnnotatorMetricResult(metric_name='f1-score', count=182, result=0.428750352375672),\n",
-       " AnnotatorMetricResult(metric_name='precision', count=182, result=0.4427905213343358),\n",
-       " AnnotatorMetricResult(metric_name='recall', count=182, result=0.5377066798941799),\n",
-       " AnnotatorMetricResult(metric_name='confusion-matrix', count=182, result={'admiration':                             suggestions_admiration_true  \\\n",
+       "[ModelMetricResult(metric_name='accuracy', count=182, result=0.5714285714285714),\n",
+       " ModelMetricResult(metric_name='f1-score', count=182, result=0.428750352375672),\n",
+       " ModelMetricResult(metric_name='precision', count=182, result=0.4427905213343358),\n",
+       " ModelMetricResult(metric_name='recall', count=182, result=0.5377066798941799),\n",
+       " ModelMetricResult(metric_name='confusion-matrix', count=182, result={'admiration':                             suggestions_admiration_true  \\\n",
        " responses_admiration_true                           174   \n",
        " responses_admiration_false                            0   \n",
        " \n",
@@ -456,10 +456,10 @@
     {
      "data": {
       "text/plain": [
-       "[AnnotatorMetricResult(metric_name='accuracy', count=1000, result=0.812),\n",
-       " AnnotatorMetricResult(metric_name='precision', count=1000, result=0.7693494302078528),\n",
-       " AnnotatorMetricResult(metric_name='recall', count=1000, result=0.7744636775213872),\n",
-       " AnnotatorMetricResult(metric_name='f1-score', count=1000, result=0.7578965673231839)]"
+       "[ModelMetricResult(metric_name='accuracy', count=1000, result=0.812),\n",
+       " ModelMetricResult(metric_name='precision', count=1000, result=0.7693494302078528),\n",
+       " ModelMetricResult(metric_name='recall', count=1000, result=0.7744636775213872),\n",
+       " ModelMetricResult(metric_name='f1-score', count=1000, result=0.7578965673231839)]"
       ]
      },
      "execution_count": 20,
