typos and other checks

--- a/docs/_source/practical_guides/annotation_workflows/add_text_descriptives_as_metadata.ipynb
+++ b/docs/_source/practical_guides/annotation_workflows/add_text_descriptives_as_metadata.ipynb
@@ -9,6 +9,7 @@
     "In this tutorial, we will add text descriptives as metadata easily using the `TextDescriptivesExtractor` integrated on Argilla.\n",
     "\n",
     "We will cover the following topics:\n",
+    "\n",
     "- 📂 Load an example dataset\n",
     "- 📃 Add text descriptives to records\n",
     "- 🗒️ Add text descriptives to a FeedbackDataset\n"
@@ -224,7 +225,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Create the FeedbackDataset"
+    "## Create the FeedbackDataset"
    ]
   },
   {
@@ -292,7 +293,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Add Text Descriptives as Metadata"
+    "## Add Text Descriptives"
    ]
   },
   {
