--- a/docs/_source/tutorials_and_integrations/integrations/add_text_descriptives_as_metadata.ipynb
+++ b/docs/_source/tutorials_and_integrations/integrations/add_text_descriptives_as_metadata.ipynb
@@ -81,7 +81,8 @@
    "source": [
     "# %pip install --upgrade pip\n",
     "%pip install argilla -qqq\n",
-    "%pip install datasets"
+    "%pip install datasets",
+    "%pip install textdescriptives"
    ]
   },
   {
