--- a/docs/_source/practical_guides/annotation_workflows/add_text_descriptives_as_metadata.ipynb
+++ b/docs/_source/practical_guides/annotation_workflows/add_text_descriptives_as_metadata.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Add `Text Descriptives` as Metadata\n",
+    "# 📇 Add Text Descriptives as Metadata\n",
     "\n",
     "In this tutorial, we will add text descriptives as metadata easily using the `TextDescriptivesExtractor` integrated on Argilla.\n",
     "\n",
@@ -81,8 +81,7 @@
    "source": [
     "# %pip install --upgrade pip\n",
     "%pip install argilla -qqq\n",
-    "%pip install datasets",
-    "%pip install textdescriptives"
+    "%pip install datasets"
    ]
   },
   {
