--- a/frontend/translation/en.json
+++ b/frontend/translation/en.json
@@ -13,6 +13,9 @@
   "to_annotate_record_bulk_required": "To annotate you must select at least one record",
   "some_records_failed_to_annotate": "Some records failed to annotate",
   "changes_no_submit": "You didn't submit your changes",
+  "bulkAnnotation": {
+    "recordsSelected": "1 record selected | {count} records selected"
+  },
   "shortcuts": {
     "label": "Shortcuts",
     "pagination": {
@@ -53,13 +56,14 @@
   "with": "with",
   "find": "Find",
   "cancel": "Cancel",
+  "focus_mode": "Focus mode",
+  "bulk_mode": "Bulk mode",
+
   "youAreOnlineAgain": "You are online again",
   "youAreOffline": "You are offline",
   "argilla": {
     "api": {
       "errors::UnauthorizedError": "Could not validate credentials"
     }
-  },
-  "focus_mode": "Focus mode",
-  "bulk_mode": "Bulk mode"
+  }
 }
