include title on buttons showing the number of selected records

--- a/frontend/translation/en.json
+++ b/frontend/translation/en.json
@@ -10,7 +10,6 @@
     "ignore_and_continue": "Ignore and continue"
   },
   "to_submit_complete_required": "To submit complete required responses",
-  "to_annotate_record_bulk_required": "To annotate you must select at least one record",
   "some_records_failed_to_annotate": "Some records failed to annotate",
   "changes_no_submit": "You didn't submit your changes",
   "bulkAnnotation": {
@@ -18,7 +17,9 @@
     "recordsViewSettings": "Records view settings",
     "recordsHeight": "Records height:",
     "fixedHeight": "Fixed height (300px)",
-    "defaultHeight": "Default height"
+    "defaultHeight": "Default height",
+    "to_annotate_record_bulk_required": "To annotate you must select at least one record",
+    "records_to_be_applied": "the action will be applied to 1 record | the action will be applied to {count} records"
   },
   "shortcuts": {
     "label": "Shortcuts",
