update the docs

--- a/docs/_source/tutorials_and_integrations/tutorials/feedback/end2end_examples/assign-records-002.ipynb
+++ b/docs/_source/tutorials_and_integrations/tutorials/feedback/end2end_examples/assign-records-002.ipynb
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,9 +224,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'text': \"Wall St. Bears Claw Back Into the Black (Reuters) Reuters - Short-sellers, Wall Street's dwindling\\\\band of ultra-cynics, are seeing green again.\"}"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "dataset[0].fields"
    ]
@@ -265,7 +276,7 @@
    "source": [
     "### Working with Groups\n",
     "\n",
-    "This section will focus on describe all the steps to assign records to predefined groups of annotators."
+    "This section will focus on describing all the steps to assign records to predefined groups of annotators."
    ]
   },
   {
@@ -286,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -484,26 +495,37 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A last option if working with no overlap, would be to use a common workspace, so that the annotators will filter the records using the [metadata](./add-metadata-003.ipynb):\n",
+    "<div class=\"alert alert-info\">\n",
+    "Note\n",
+    "\n",
+    "A last option would be to use a common workspace, so that the annotators will filter the records using the [metadata](./add-metadata-003.ipynb) according to the group they belong to:\n",
     "\n",
     "```python\n",
-    "# Add the metadata to the existing records\n",
-    "modified_records = []\n",
+    "# Add the metadata to the existing records using id to identify each record\n",
+    "id_modified_records = {}\n",
     "for group, users in assignments.items():\n",
     "    assigned_records = next(iter(assignments[group].values()))\n",
     "    for record in assigned_records:\n",
-    "        record.metadata[\"groups\"] = group\n",
-    "        modified_records.append(record)\n",
+    "        record_id = id(record)\n",
+    "        if record_id not in id_modified_records:\n",
+    "            id_modified_records[record_id] = record\n",
+    "            record.metadata[\"annotator_groups\"] = []\n",
+    "        if group not in id_modified_records[record_id].metadata[\"annotator_groups\"]:\n",
+    "            id_modified_records[record_id].metadata[\"annotator_groups\"].append(group)\n",
+    "\n",
+    "# Get the unique records with their updated metadata\n",
+    "modified_records = list(id_modified_records.values())\n",
     "\n",
     "# Push the dataset with the modified records\n",
     "dataset = rg.FeedbackDataset.for_text_classification(\n",
     "    labels=[\"World\", \"Sports\", \"Business\", \"Sci/Tech\"],\n",
     "    guidelines=\"Classify the articles into one of the four categories.\",\n",
-    "    metadata_properties=[rg.TermsMetadataProperty(name=\"groups\")]\n",
+    "    metadata_properties=[rg.TermsMetadataProperty(name=\"annotator_groups\")]\n",
     ")\n",
     "dataset.add_records(modified_records)\n",
-    "remote_dataset = dataset.push_to_argilla(name=\"end2end_textclassification_metadata_assignment\", workspace=\"admin\")\n",
-    "```"
+    "remote_dataset = dataset.push_to_argilla(name=\"text-classification_assignment_metadata\", workspace=\"argilla\")\n",
+    "```\n",
+    "</div>"
    ]
   },
   {
@@ -589,7 +611,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this case, the output is structured as a dictionary with the user as a key and a list of their assigned records as values. And, each annotator will have 200 records assigned as the overlap was set to 2."
+    "In this case, the output is structured as a dictionary with the user as a key and a list of their assigned records as values. And, as the users are 10, each annotator will have 200 records assigned as the overlap was set to 2."
    ]
   },
   {
@@ -662,23 +684,31 @@
     "<div class=\"alert alert-info\">\n",
     "Note\n",
     "\n",
-    "As when we work with groups, it is also possible to use a common workspace if working with no overlap, where each annotator will filter its records using the [metadata](./add-metadata-003.ipynb):\n",
+    "As when we work with groups, it is also possible to use a common workspace, where each annotator will filter its records using the [metadata](./add-metadata-003.ipynb):\n",
     "\n",
     "```python\n",
-    "#Add the metadata to the existing records\n",
-    "modified_records = []\n",
+    "#Add the metadata to the existing records using id to identify each record\n",
+    "id_modified_records = {}\n",
     "for username, records in assignments.items():\n",
-    "  for record in records:\n",
-    "    record.metadata[\"annotator\"] = username\n",
-    "    modified_records.append(record)\n",
+    "    for record in records:\n",
+    "        record_id = id(record)\n",
+    "        if record_id not in id_modified_records:\n",
+    "            id_modified_records[record_id] = record\n",
+    "            record.metadata[\"annotators\"] = []\n",
+    "        if username not in id_modified_records[record_id].metadata[\"annotators\"]:\n",
+    "            id_modified_records[record_id].metadata[\"annotators\"].append(username)\n",
+    "\n",
+    "# Get the unique records with their updated metadata\n",
+    "modified_records = list(id_modified_records.values())\n",
+    "\n",
     "# Push the dataset with the modified records\n",
     "dataset = rg.FeedbackDataset.for_text_classification(\n",
     "        labels=[\"World\", \"Sports\", \"Business\", \"Sci/Tech\"],\n",
     "        guidelines=\"Classify the articles into one of the four categories.\",\n",
-    "        metadata_properties=[rg.TermsMetadataProperty(name=\"annotator\")]\n",
-    "  )\n",
+    "        metadata_properties=[rg.TermsMetadataProperty(name=\"annotators\")]\n",
+    "    )\n",
     "dataset.add_records(modified_records)\n",
-    "remote_dataset = dataset.push_to_argilla(name=\"text_classification20\", workspace=\"admin\")\n",
+    "remote_dataset = dataset.push_to_argilla(name=\"text-classification_assignment_metadata\", workspace=\"argilla\")\n",
     "```\n",
     "</div>"
    ]
@@ -700,7 +730,16 @@
    "name": "python3"
   },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
