✨ Add copy button and fix status tag class

--- a/frontend/translation/en.json
+++ b/frontend/translation/en.json
@@ -8,6 +8,7 @@
   "saved": "Saved",
   "minimize": "Minimize",
   "expand": "Expand",
+  "copied": "Copied",
   "button": {
     "ignore_and_continue": "Ignore and continue"
   },
